Update Document parsing using LLM.ipynb

--- a/Document parsing using LLM.ipynb
+++ b/Document parsing using LLM.ipynb
@@ -2549,7 +2549,7 @@
     "deduplicated_domains = []\n",
     "original_to_dedup = []\n",
     "for item in area_domain_data:\n",
-    "    item_lower = item.strip().lower()\n",
+    "    item_lower = item.capitalize()#you may also test item.lower() for lower case or leave the text as it is.\n",
     "    if item_lower not in deduplicated_domains:\n",
     "        deduplicated_domains.append(item_lower)\n",
     "    original_to_dedup.append(deduplicated_domains.index(item_lower))\n",
